--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -8,5 +8,5 @@ Maintainer: Aaron Robotham <aaron.robotham@uwa.edu.au>
 Description: Core package containing all the tools for simple and advanced source extraction. used to create inputs for ProFit, or for source detection, extraction and photometry in its own right.
 License: GPL-3
 Depends: R (>= 3.0), magicaxis (>= 2.0.3), celestial (>= 1.4.1), FITSio, data.table
-Suggests: ProFit, knitr, rmarkdown, EBImage, akima, imager
+Suggests: ProFit, knitr, rmarkdown, EBImage, akima, imager, LaplacesDemon
 VignetteBuilder: knitr
