--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,11 +2,11 @@ Package: ProFound
 Type: Package
 Title: Photometry Tools
 Version: 1.0.0
-Date: 2017-07-24
+Date: 2017-10-11
 Author: Aaron Robotham
 Maintainer: Aaron Robotham <aaron.robotham@uwa.edu.au>
 Description: Core package containing all the tools for simple and advanced source extraction. This is used to create inputs for ProFit, or for source detection, extraction and photometry in its own right.
-License: GPL-3
+License: LGPL-3
 Depends: R (>= 3.0), magicaxis (>= 2.0.3), celestial (>= 1.4.1), FITSio, data.table
 Suggests: ProFit, knitr, rmarkdown, EBImage, akima, imager, LaplacesDemon
 VignetteBuilder: knitr
