Removed strict dependency on imager for profoundMakeSegim when smoothing is turned on. If imager is not present it will use EBImage instead (must at least have one of these!).

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,6 @@ import("stats")
 import("graphics")
 import("grDevices")
 
-importFrom("utils", "relist")
+importFrom("utils", "relist", "packageVersion")
 
 S3method("plot","profound")
