Altered the first image in plot.profound to better show the positive and negative sky by using a colour palette.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,5 +8,6 @@ import("graphics")
 import("grDevices")
 
 importFrom("utils", "relist", "packageVersion")
+importFrom("RColorBrewer", "brewer.pal")
 
 S3method("plot","profound")
