Various speed ups and enhancements.
Now needs package fastmatch to help with some of the slower matching parts.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -15,5 +15,6 @@ import("doParallel")
 importFrom("Rcpp", "evalCpp")
 importFrom("utils", "relist", "packageVersion")
 importFrom("RColorBrewer", "brewer.pal")
+importFrom("fastmatch", "fmatch")
 
 S3method("plot","profound")
