--- a/NAMESPACE
+++ b/NAMESPACE
@@ -17,3 +17,4 @@ importFrom("utils", "relist", "packageVersion")
 importFrom("RColorBrewer", "brewer.pal")
 
 S3method("plot","profound")
+S3method("plot","fitmagpsf")
