Install missing suggested packages
Signed-off-by: Rodrigo Tobar <rtobar@icrar.org>

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -59,10 +59,13 @@ jobs:
           Rscript -e "remotes::install_github('r-hub/sysreqs')"
           sysreqs=$(Rscript -e "cat(sysreqs::sysreq_commands('DESCRIPTION'))")
           sudo -s eval "$sysreqs"
+
       - name: Install dependencies
         run: |
           remotes::install_deps(dependencies = TRUE)
           remotes::install_cran("rcmdcheck")
+          remotes::install_bioc("EBImage")
+          remotes::install_github(c("asgr/Rfits", "asgr/Rwcs"))
         shell: Rscript {0}
 
       - name: Check
