--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: ProFound
 Type: Package
 Title: Photometry Tools
-Version: 1.14.0
+Version: 1.14.1
 Date: 2020-12-03
 Author: Aaron Robotham
 Maintainer: Aaron Robotham <aaron.robotham@uwa.edu.au>
@@ -9,9 +9,8 @@ Description: Core package containing all the tools for simple and advanced sourc
 License: LGPL-3
 Depends: R (>= 3.1), FITSio, magicaxis (>= 2.0.8), Rcpp (>= 1.0.2)
 Imports: RColorBrewer, data.table, celestial (>= 1.4.1), foreach
-Suggests: ProFit, knitr, rmarkdown, EBImage, imager, LaplacesDemon, Rfast, fastmatch, Rfits, Rwcs, snow, doSNOW, bigmemory
+Suggests: ProFit, knitr, rmarkdown, EBImage, imager, LaplacesDemon, Rfast, fastmatch, snow, doSNOW, bigmemory, Rfits, Rwcs
 VignetteBuilder: knitr
 SystemRequirements: C++11
 LinkingTo: Rcpp
 NeedsCompilation: yes
-Additional_repositories: https://github.com/asgr
