Adding some compressed multiband data and new vignette.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,7 +5,6 @@ useDynLib(ProFound, .registration=TRUE)
 import("FITSio")
 import("magicaxis")
 import("data.table")
-import("celestial")
 import("stats")
 import("graphics")
 import("grDevices")
@@ -14,6 +13,7 @@ import("foreach")
 importFrom("Rcpp", "evalCpp")
 importFrom("utils", "relist", "packageVersion")
 importFrom("RColorBrewer", "brewer.pal")
+importFrom("celestial", "getpixscale")
 
 S3method("plot","profound")
 S3method("plot","fitmagpsf")
