--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,14 +1,14 @@
 Package: ProFound
 Type: Package
 Title: Photometry Tools
-Version: 1.18.6
-Date: 2022-07-13
+Version: 1.18.7
+Date: 2022-07-28
 Author: Aaron Robotham
 Maintainer: Aaron Robotham <aaron.robotham@uwa.edu.au>
 Description: Core package containing all the tools for simple and advanced source extraction. This is used to create inputs for 'ProFit', or for source detection, extraction and photometry in its own right.
 License: LGPL-3
 Depends: R (>= 3.1), FITSio, magicaxis (>= 2.0.8), Rcpp (>= 1.0.2)
-Imports: data.table, celestial (>= 1.4.1), foreach
+Imports: data.table, celestial (>= 1.4.1), foreach, matrixStats
 Suggests: ProFit, knitr, rmarkdown, EBImage, imager, LaplacesDemon, Rfast, fastmatch, snow, doSNOW, bigmemory, mvtnorm, Rfits, Rwcs, Highlander (>= 0.1.7)
 VignetteBuilder: knitr
 SystemRequirements: C++11
