--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -9,7 +9,7 @@ Description: Core package containing all the tools for simple and advanced sourc
 License: LGPL-3
 Depends: R (>= 3.1), FITSio, magicaxis (>= 2.0.8), Rcpp (>= 1.0.2)
 Imports: data.table, celestial (>= 1.4.1), foreach, matrixStats
-Suggests: ProFit, knitr, rmarkdown, EBImage, imager, LaplacesDemon, Rfast, fastmatch, snow, doSNOW, bigmemory, mvtnorm, Rfits, Rwcs, Highlander (>= 0.1.7)
+Suggests: ProFit, knitr, rmarkdown, EBImage, imager, LaplacesDemon, Rfast, Rfast2, fastmatch, snow, doSNOW, bigmemory, mvtnorm, Rfits, Rwcs, Highlander (>= 0.1.7)
 VignetteBuilder: knitr
 SystemRequirements: C++11
 LinkingTo: Rcpp
