New profoundSegimCompare allows us to bijectively compare rival sementation maps and therefore compare segstats for 'similar' objects in an objective manner.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,6 +9,7 @@ import("stats")
 import("graphics")
 import("grDevices")
 import("foreach")
+import("doParallel")
 
 importFrom("Rcpp", "evalCpp")
 importFrom("utils", "relist", "packageVersion")
