All code and docs now only reference Rfits_image objects and the Rfits package for reading FITS. read.fits (astro) and readFITS (FITSio) are now no longer supported and should not be used in conjunction with ProFound.
Some broken vignettes and examples have been fixed.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,7 +2,7 @@ exportPattern("^[[:alpha:]]+")
 
 useDynLib(ProFound, .registration=TRUE)
 
-import("FITSio")
+import("Rfits")
 import("magicaxis")
 import("data.table")
 import("stats")
@@ -13,7 +13,7 @@ import("doParallel")
 
 importFrom("Rcpp", "evalCpp")
 importFrom("utils", "relist", "packageVersion")
-importFrom("celestial", "getpixscale")
+importFrom("celestial", "getpixscale", "coordmatch")
 importFrom("matrixStats", "colQuantiles", "colCounts")
 
 S3method("plot","profound")
