--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,6 +30,24 @@ jobs:
     steps:
       - uses: actions/checkout@v2
 
+      - name: Install X11 on macOS
+        if: runner.os == 'macOS'
+        run: |
+          brew update
+          brew install --cask xquartz
+
+      - Name: Install X11 on Ubuntu
+        if: runner.os == 'Linux'
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y \
+            xorg \
+            xvfb \
+            libx11-dev \
+            libxext-dev \
+            libxrender-dev \
+            libxtst-dev \
+            libxi-dev
       - uses: r-lib/actions/setup-pandoc@v2
 
       - uses: r-lib/actions/setup-r@v2
