--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -35,20 +35,7 @@ jobs:
         run: |
           brew update
           brew install --cask xquartz
-        
-      - name: Install X11 on Ubuntu
-        if: runner.os == 'Linux'
-        run: |
-          sudo apt-get update
-          sudo apt-get install -y \
-            xorg \
-            xvfb \
-            libx11-dev \
-            libxext-dev \
-            libxrender-dev \
-            libxtst-dev \
-            libxi-dev
-            
+
       - uses: r-lib/actions/setup-pandoc@v2
 
       - uses: r-lib/actions/setup-r@v2
@@ -63,8 +50,7 @@ jobs:
           install.packages('hdf5r')
           install.packages('knitr')
           install.packages('rmarkdown')
-          install.packages('igraph')
-          remotes::install_github("asgr/imager", ref="low-depend") #to make sure we have the easy to install one, not CRAN
+          install.packages('imager')
           remotes::install_deps(dependencies = TRUE)
           remotes::install_cran("rcmdcheck")
           remotes::install_github("asgr/Rwcs", ref="master")
